--- a/cronometroJS/index.html
+++ b/cronometroJS/index.html
@@ -1,1 +1,59 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cronômetro JS</title>
+    <style>
+        * {
+        padding:0;
+        margin:0;
+        vertical-align:baseline;
+        list-style:none;
+        border:0;
+        color: aliceblue;
+        }
+        h1{
+            font-family: sans-serif;
+            font-size: 70px;
+        }
+        body{
+            background-color: #2a2a2a;
+        }
+        div{
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        button{
+            padding: 15px 80px;
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 1%;
+        }
+        #start{
+            background-color:green;
+        }
+        #pause{
+            background-color:goldenrod ;
+        }
+        #stop{
+            background-color: darkred;
+        }
+    </style>
+</head>
+<body>
+    <div>
+        <h1>Cronômetro</h1>
+        <h1 id="cont">00:00:00</h1>
+        <button id="start" onclick="start()">INICIAR</button>
+        <button id="pause" onclick="pause()">PAUSE</button>
+        <button id="stop" onclick="parar()">PARAR</button>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
