alterações no footer

--- a/cronometroJS/index.html
+++ b/cronometroJS/index.html
@@ -47,7 +47,7 @@
         footer{
             display: flex;
             justify-content: center;
-            margin-top: 20%;
+            margin-top: 5%;
         }
         a{
             color: darkturquoise;
@@ -65,7 +65,7 @@
         <button id="start" onclick="start()">INICIAR</button>
         <button id="pause" onclick="pause()">PAUSE</button>
         <button id="stop" onclick="parar()">PARAR</button>
-        <footer>Desenvolvido por <a href="https://github.com/profhdeivisson">Deivisson Henrique</a> | <a href="https://tudoinforj.com.br">TudoInfoRJ</a></footer>
+        <footer>Desenvolvido por <a href="https://github.com/profhdeivisson" target="_blank">Deivisson Henrique</a> | <a href="https://tudoinforj.com.br" target="_blank">TudoInfoRJ</a></footer>
     </div>
 
     
