--- a/cronometroJS/index.html
+++ b/cronometroJS/index.html
@@ -6,68 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronômetro JS</title>
     <style>
-        * {
-        padding:0;
-        margin:0;
-        vertical-align:baseline;
-        list-style:none;
-        border:0;
-        color: aliceblue;
+        @import url('https://fonts.googleapis.com/css2?family=Geostar&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Zilla+Slab+Highlight:wght@700&display=swap');
+        #cont{
+            font-family: 'Geostar' !important;
         }
         h1{
-            font-family: sans-serif;
-            font-size: 70px;
-        }
-        body{
-            background-color: #2a2a2a;
-        }
-        div{
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        button{
-            padding: 15px 80px;
-            font-size: 20px;
-            font-weight: bold;
-            margin-bottom: 1%;
-        }
-        #start{
-            background-color:green;
-        }
-        #pause{
-            background-color:goldenrod ;
-        }
-        #stop{
-            background-color: darkred;
-        }
-        footer{
-            display: flex;
-            justify-content: center;
-            margin-top: 5%;
-        }
-        a{
-            color: darkturquoise;
-            text-decoration: none;
+            font-size: 8vh !important;
+            font-family: 'Zilla Slab Highlight', cursive;
         }
         a:hover{
             text-decoration: underline;
         }
     </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
-<body>
-    <div>
-        <h1>Cronômetro</h1>
+<body class="bg-dark text-light">
+    <div class="container-sm d-flex flex-column position-absolute top-50 start-50 translate-middle">
+        <h1>CRONÔMETRO</h1>
         <h1 id="cont">00:00:00</h1>
-        <button id="start" onclick="start()">INICIAR</button>
-        <button id="pause" onclick="pause()">PAUSE</button>
-        <button id="stop" onclick="parar()">PARAR</button>
-        <footer>Desenvolvido por <a href="https://github.com/profhdeivisson" target="_blank">Deivisson Henrique</a> | <a href="https://tudoinforj.com.br" target="_blank">TudoInfoRJ</a></footer>
+        <button id="start" class="btn btn-success mb-2" onclick="start()">INICIAR</button>
+        <button id="pause" class="btn btn-warning text-light mb-2" onclick="pause()">PAUSE</button>
+        <button id="stop" class="btn btn-danger" onclick="parar()">PARAR</button>
     </div>
-
+    <footer class="position-absolute bottom-0 p-3">Desenvolvido por <a href="https://github.com/profhdeivisson" class="text-info text-decoration-none" target="_blank">Deivisson Henrique</a> | <a href="https://tudoinforj.com.br" class="text-info text-decoration-none" target="_blank">TudoInfoRJ</a></footer>
     
     <script src="script.js"></script>
 </body>
