--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
     <div class="navbar navbar-inverse navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
+          </button>-->
           <a class="navbar-brand" href="index.html">PROFHDEIVISSON</a>
         </div>
-        <div class="navbar-collapse collapse">
+        <!--<div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">SOBRE MIM</a></li>
             <li><a href="contact.html">Contato</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>-->
       </div>
     </div>
 
