--- a/index.html
+++ b/index.html
@@ -71,29 +71,29 @@
 	<div class="container pt">
 		<div class="row mt centered">	
 			<div class="col-lg-4">
-				<a class="zoom blue" href="https://profhdeivisson.github.io/climaTempoJS/"><img class="img-responsive" src="assets/img/portfolio/climatempoJS.jpg" alt="" /></a>
+				<a class="zoom blue" href="https://profhdeivisson.github.io/climaTempoJS/" target="_blank"><img class="img-responsive" src="assets/img/portfolio/climatempoJS.jpg" alt="" /></a>
 				<p>ClimaTempoJS</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="zoom blue" href="https://profhdeivisson.github.io/cronometroJS/"><img class="img-responsive" src="assets/img/portfolio/cronometroJS.jpg" alt="" /></a>
+				<a class="zoom blue" href="https://profhdeivisson.github.io/cronometroJS/" target="_blank"><img class="img-responsive" src="assets/img/portfolio/cronometroJS.jpg" alt="" /></a>
 				<p>CronômetroJS</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="zoom blue" href="https://profhdeivisson.github.io/cepJS/"><img class="img-responsive" src="assets/img/portfolio/cepJS.png" alt="" /></a>
+				<a class="zoom blue" href="https://profhdeivisson.github.io/cepJS/" target="_blank"><img class="img-responsive" src="assets/img/portfolio/cepJS.png" alt="" /></a>
 				<p>CepJS</p>
 			</div>
 		</div><!-- /row -->
 		<div class="row mt centered">	
 			<div class="col-lg-4">
-				<a class="zoom blue" href="https://profhdeivisson.github.io/pianoJS/"><img class="img-responsive" src="assets/img/portfolio/pianoJS.jpg" alt="" /></a>
+				<a class="zoom blue" href="https://profhdeivisson.github.io/pianoJS/" target="_blank"><img class="img-responsive" src="assets/img/portfolio/pianoJS.jpg" alt="" /></a>
 				<p>PianoJS</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="zoom blue" href="https://profhdeivisson.github.io/imcJS/"><img class="img-responsive" src="assets/img/portfolio/imcJS.jpg" alt="" /></a>
+				<a class="zoom blue" href="https://profhdeivisson.github.io/imcJS/" target="_blank"><img class="img-responsive" src="assets/img/portfolio/imcJS.jpg" alt="" /></a>
 				<p>imcJS</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="zoom blue" href="https://profhdeivisson.github.io/pongJS/"><img class="img-responsive" src="assets/img/portfolio/pongJS.jpg" alt="" /></a>
+				<a class="zoom blue" href="https://profhdeivisson.github.io/pongJS/" target="_blank"><img class="img-responsive" src="assets/img/portfolio/pongJS.jpg" alt="" /></a>
 				<p>PongJS</p>
 			</div>
 		</div><!-- /row -->
@@ -117,7 +117,7 @@
 					<p>
 						<a href="https://www.behance.net/profhdeivisson" target="_blank">Behance</a><br/>
 						<a href="https://github.com/profhdeivisson" target="_blank">Github</a><br/>
-						<a href="instagram.com/profhdeivisson/" target="_blank">Instagram</a><br/>
+						<a href="https://instagram.com/profhdeivisson/" target="_blank">Instagram</a><br/>
 						<a href="https://tudoinforj.com.br" target="_blank">TudoInfoRJ</a>
 					</p>
 				</div><!-- /col-lg-4 -->
