título do portifólio adicionado com descrição.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<img src="assets/img/me.jpg" class="me img-thumbnail" alt="ProfHDeivisson">
 					<h1>Hello world, eu sou Deivisson Henrique!</h1>
 					<p>Sou Professor de Tecnologia, CEO da TudoInfoRJ e um grande amante de Tecnologia, Programação, Livros e Séries ⚡</p>
-					<p>Pai de 3 filhos lindos, Casado e sempre em busca de novas experiências e novos conhecimentos. Aqui, você verá um pouco sobre mim e minhas skills. Fique a vontade!</p>
+					<p>Pai de 3 filhos lindos, Casado e sempre em busca de novas experiências e novos conhecimentos. Aqui, você verá um pouco sobre mim, minhas skills e alguns projetos pessoais feitos em Javascript. Fique a vontade!</p>
 				
 				</div><!-- /col-lg-8 -->
 			</div><!-- /row -->
@@ -69,6 +69,8 @@
 	<!-- +++++ Projects Section +++++ -->
 	
 	<div class="container pt">
+		<h2 class="container centered mb">Projetos Pessoais - Javascript</h2>
+		<p class="container centered mb">Veja a seguir alguns pequenos projetos feitos com HTML, CSS e JS. Espero que gostem!</p>
 		<div class="row mt centered">	
 			<div class="col-lg-4">
 				<a class="zoom blue" href="https://profhdeivisson.github.io/climaTempoJS/" target="_blank"><img class="img-responsive" src="assets/img/portfolio/climatempoJS.jpg" alt="" /></a>
