TodoListJS adicionado ao Portfólio

--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
 				<p>PongJS</p>
 			</div>
 		</div><!-- /row -->
+		<div class="row mt centered">	
+			<div class="col-lg-4">
+				<a class="zoom blue" href="https://profhdeivisson.github.io/ToDoListJS/" target="_blank"><img class="img-responsive" src="assets/img/portfolio/ToDoListJS.jpeg" alt="" /></a>
+				<p>ToDoList</p>
+			</div>
+		</div><!-- /row -->
 	</div><!-- /container -->
 	
 	
