Add Projeto Gerador de Senha

--- a/index.html
+++ b/index.html
@@ -165,6 +165,15 @@
           /></a>
           <p>Super Heroes</p>
         </div>
+        <div class="col-lg-4">
+          <a class="zoom blue" href="./GeradorDeSenhaJS/" target="_blank"
+            ><img
+              class="img-responsive"
+              src="assets/img/portfolio/senha.jpg"
+              alt=""
+          /></a>
+          <p>Gerador de Senha</p>
+        </div>
       </div>
       <!-- /row -->
     </div>
