--- a/index.html
+++ b/index.html
@@ -1,228 +1,187 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png" />
 
-    <title>ProfHDeivisson</title>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png" />
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet" />
+  <title>ProfHDeivisson</title>
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet" />
+  <!-- Bootstrap core CSS -->
+  <link href="assets/css/bootstrap.css" rel="stylesheet" />
 
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/hover.zoom.js"></script>
-    <script src="assets/js/hover.zoom.conf.js"></script>
+  <!-- Custom styles for this template -->
+  <link href="assets/css/main.css" rel="stylesheet" />
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="assets/js/hover.zoom.js"></script>
+  <script src="assets/js/hover.zoom.conf.js"></script>
+
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
-    <!-- Static navbar -->
-    <div class="navbar navbar-inverse navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+<body>
+  <!-- Static navbar -->
+  <div class="navbar navbar-inverse navbar-static-top">
+    <div class="container">
+      <div class="navbar-header">
+        <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>-->
-          <a class="navbar-brand" href="index.html">PROFHDEIVISSON</a>
-        </div>
-        <!--<div class="navbar-collapse collapse">
+        <a class="navbar-brand" href="index.html">PROFHDEIVISSON</a>
+      </div>
+      <!--<div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">SOBRE MIM</a></li>
             <li><a href="contact.html">Contato</a></li>
           </ul>
         </div>-->
-      </div>
     </div>
+  </div>
 
-    <!-- +++++ Welcome Section +++++ -->
-    <div id="ww">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-lg-offset-2 centered">
-            <img
-              src="assets/img/me.jpg"
-              class="me img-thumbnail"
-              alt="ProfHDeivisson"
-            />
-            <h1>Hello world, eu sou Deivisson Henrique!</h1>
-            <p>
-              Sou Professor de Tecnologia, CEO da TudoInfoRJ e um grande amante
-              de Tecnologia, Programação, Livros e Séries ⚡
-            </p>
-            <p>
-              Pai de 3 filhos lindos, Casado e sempre em busca de novas
-              experiências e novos conhecimentos. Aqui, você verá um pouco sobre
-              mim, minhas skills e alguns projetos pessoais feitos em
-              Javascript. Fique a vontade!
-            </p>
-          </div>
-          <!-- /col-lg-8 -->
+  <!-- +++++ Welcome Section +++++ -->
+  <div id="ww">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 centered">
+          <img src="assets/img/me.jpg" class="me img-thumbnail" alt="ProfHDeivisson" />
+          <h1>Hello world, eu sou Deivisson Henrique!</h1>
+          <p>
+            Sou Professor de Tecnologia, CEO da TudoInfoRJ e um grande amante
+            de Tecnologia, Programação, Livros e Séries ⚡
+          </p>
+          <p>
+            Pai de 3 filhos lindos, Casado e sempre em busca de novas
+            experiências e novos conhecimentos. Aqui, você verá um pouco sobre
+            mim, minhas skills e alguns projetos pessoais feitos em
+            Javascript. Fique a vontade!
+          </p>
         </div>
-        <!-- /row -->
-      </div>
-      <!-- /container -->
-    </div>
-    <!-- /ww -->
-
-    <!-- +++++ Projects Section +++++ -->
-
-    <div class="container pt">
-      <h2 class="container centered mb">Projetos Pessoais - Javascript</h2>
-      <p class="container centered mb">
-        Veja a seguir alguns pequenos projetos feitos com HTML, CSS e JS. Espero
-        que gostem!
-      </p>
-      <div class="row mt centered">
-        <div class="col-lg-4">
-          <a class="zoom blue" href="./climaTempoJS/" target="_blank"
-            ><img
-              class="img-responsive"
-              src="assets/img/portfolio/climatempoJS.jpg"
-              alt=""
-          /></a>
-          <p>ClimaTempoJS</p>
-        </div>
-        <div class="col-lg-4">
-          <a class="zoom blue" href="./cronometroJS/" target="_blank"
-            ><img
-              class="img-responsive"
-              src="assets/img/portfolio/cronometroJS.jpg"
-              alt=""
-          /></a>
-          <p>CronômetroJS</p>
-        </div>
-        <div class="col-lg-4">
-          <a class="zoom blue" href="./cepJS/" target="_blank"
-            ><img
-              class="img-responsive"
-              src="assets/img/portfolio/cepJS.png"
-              alt=""
-          /></a>
-          <p>CepJS</p>
-        </div>
-      </div>
-      <!-- /row -->
-      <div class="row mt centered">
-        <div class="col-lg-4">
-          <a class="zoom blue" href="./pianoJS/" target="_blank"
-            ><img
-              class="img-responsive"
-              src="assets/img/portfolio/pianoJS.jpg"
-              alt=""
-          /></a>
-          <p>PianoJS</p>
-        </div>
-        <div class="col-lg-4">
-          <a class="zoom blue" href="./imcJS/" target="_blank"
-            ><img
-              class="img-responsive"
-              src="assets/img/portfolio/imcJS.jpg"
-              alt=""
-          /></a>
-          <p>imcJS</p>
-        </div>
-        <div class="col-lg-4">
-          <a class="zoom blue" href="./pongJS/" target="_blank"
-            ><img
-              class="img-responsive"
-              src="assets/img/portfolio/pongJS.jpg"
-              alt=""
-          /></a>
-          <p>PongJS</p>
-        </div>
-      </div>
-      <!-- /row -->
-      <div class="row mt centered">
-        <div class="col-lg-4">
-          <a class="zoom blue" href="./ToDoListJS/" target="_blank"
-            ><img
-              class="img-responsive"
-              src="assets/img/portfolio/ToDoListJS.jpeg"
-              alt=""
-          /></a>
-          <p>ToDoList</p>
-        </div>
-        <div class="col-lg-4">
-          <a class="zoom blue" href="./SuperHeroes/" target="_blank"
-            ><img
-              class="img-responsive"
-              src="assets/img/portfolio/SuperHeroes.jpg"
-              alt=""
-          /></a>
-          <p>Super Heroes</p>
-        </div>
-        <div class="col-lg-4">
-          <a class="zoom blue" href="./GeradorDeSenhaJS/" target="_blank"
-            ><img
-              class="img-responsive"
-              src="assets/img/portfolio/senha.jpg"
-              alt=""
-          /></a>
-          <p>Gerador de Senha</p>
-        </div>
+        <!-- /col-lg-8 -->
       </div>
       <!-- /row -->
     </div>
     <!-- /container -->
+  </div>
+  <!-- /ww -->
 
-    <!-- +++++ Footer Section +++++ -->
+  <!-- +++++ Projects Section +++++ -->
 
-    <div id="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4">
-            <h4>Whatsapp</h4>
-            <p>
-              <a href="https://wa.me/5521989975627" target="_blank"
-                >(21) 98997-5627</a
-              >
-            </p>
-          </div>
-          <!-- /col-lg-4 -->
-
-          <div class="col-lg-4">
-            <h4>Minhas Redes</h4>
-            <p>
-              <a href="https://www.behance.net/profhdeivisson" target="_blank"
-                >Behance</a
-              ><br />
-              <a href="https://github.com/profhdeivisson" target="_blank"
-                >Github</a
-              ><br />
-              <a href="https://instagram.com/profhdeivisson/" target="_blank"
-                >Instagram</a
-              ><br />
-              <a href="https://tudoinforj.com.br" target="_blank">TudoInfoRJ</a>
-            </p>
-          </div>
-          <!-- /col-lg-4 -->
-
-          <div class="col-lg-4">
-            <h4>Gostou?</h4>
-            <p>Espero que tenha gostado do conteúdo. Volte sempre! 👨🏾‍💻☕</p>
-          </div>
-          <!-- /col-lg-4 -->
-        </div>
+  <div class="container pt">
+    <h2 class="container centered mb">Projetos Pessoais - Javascript</h2>
+    <p class="container centered mb">
+      Veja a seguir alguns pequenos projetos feitos com HTML, CSS e JS. Espero
+      que gostem!
+    </p>
+    <div class="row mt centered">
+      <div class="col-lg-4">
+        <a class="zoom blue" href="./climaTempoJS/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/climatempoJS.jpg" alt="" /></a>
+        <p>ClimaTempoJS</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="./cronometroJS/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/cronometroJS.jpg" alt="" /></a>
+        <p>CronômetroJS</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="./cepJS/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/cepJS.png" alt="" /></a>
+        <p>CepJS</p>
       </div>
     </div>
+    <!-- /row -->
+    <div class="row mt centered">
+      <div class="col-lg-4">
+        <a class="zoom blue" href="./pianoJS/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/pianoJS.jpg" alt="" /></a>
+        <p>PianoJS</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="./imcJS/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/imcJS.jpg" alt="" /></a>
+        <p>imcJS</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="./pongJS/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/pongJS.jpg" alt="" /></a>
+        <p>PongJS</p>
+      </div>
+    </div>
+    <!-- /row -->
+    <div class="row mt centered">
+      <div class="col-lg-4">
+        <a class="zoom blue" href="./ToDoListJS/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/ToDoListJS.jpeg" alt="" /></a>
+        <p>ToDoList</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="./SuperHeroes/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/SuperHeroes.jpg" alt="" /></a>
+        <p>Super Heroes</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="./GeradorDeSenhaJS/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/senha.jpg" alt="" /></a>
+        <p>Gerador de Senha</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="./JoKenPo JS/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/jokenpo.jpg" alt="" /></a>
+        <p>JoKenPo2.0</p>
+      </div>
+    </div>
+    <!-- /row -->
+  </div>
+  <!-- /container -->
 
-    <!-- Bootstrap core JavaScript
+  <!-- +++++ Footer Section +++++ -->
+
+  <div id="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <h4>Whatsapp</h4>
+          <p>
+            <a href="https://wa.me/5521989975627" target="_blank">(21) 98997-5627</a>
+          </p>
+        </div>
+        <!-- /col-lg-4 -->
+
+        <div class="col-lg-4">
+          <h4>Minhas Redes</h4>
+          <p>
+            <a href="https://www.behance.net/profhdeivisson" target="_blank">Behance</a><br />
+            <a href="https://github.com/profhdeivisson" target="_blank">Github</a><br />
+            <a href="https://instagram.com/profhdeivisson/" target="_blank">Instagram</a><br />
+            <a href="https://tudoinforj.com.br" target="_blank">TudoInfoRJ</a>
+          </p>
+        </div>
+        <!-- /col-lg-4 -->
+
+        <div class="col-lg-4">
+          <h4>Gostou?</h4>
+          <p>Espero que tenha gostado do conteúdo. Volte sempre! 👨🏾‍💻☕</p>
+        </div>
+        <!-- /col-lg-4 -->
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="assets/js/bootstrap.min.js"></script>
+</body>
+
 </html>
