Projeto Calculadora-JS-v2

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8784082888696558"
-     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8784082888696558"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -141,6 +141,11 @@
         <a class="zoom blue" href="./JoKenPo JS/" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/jokenpo.jpg" alt="" /></a>
         <p>JoKenPo2.0</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="./calculadora-JS-v2/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/calculadora.jpg" alt="" /></a>
+        <p>Calculadora2.0</p>
       </div>
     </div>
     <!-- /row -->
