Mudanças no título da página, modificação nos nomes dos projetos, adição do link do linkedin no footer e alteração da calculadoraJS

--- a/calculadora-JS-v2/index.html
+++ b/calculadora-JS-v2/index.html
@@ -3,45 +3,46 @@
 
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora JS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="box">
-        <h1 class="titulo">CALCULADORA VERSÃO 2.0</h1>
-        <div id="calculadora">
-            <div id="visor"></div>
-            <br />
-            <button class="botao ac" id="limparVisor">C</button>
-            <button class="botao operacao" id="backspace">←</button>
-            <button class="botao operacao" id="raiz">√</button>
-            <button class="botao operacao" id="operadorDividir">/</button>
-            <br />
-            <button class="botao" id="tecla7">7</button>
-            <button class="botao" id="tecla8">8</button>
-            <button class="botao" id="tecla9">9</button>
-            <button class="botao operacao" id="operadorMultiplicar">*</button>
-            <br />
-            <button class="botao" id="tecla4">4</button>
-            <button class="botao" id="tecla5">5</button>
-            <button class="botao" id="tecla6">6</button>
-            <button class="botao operacao" id="operadorSubtrair">-</button>
-            <br />
-            <button class="botao" id="tecla1">1</button>
-            <button class="botao" id="tecla2">2</button>
-            <button class="botao" id="tecla3">3</button>
-            <button class="botao operacao" id="operadorSomar">+</button>
-            <br />
-            <button class="botao zero" id="tecla0">0</button>
-            <button class="botao" id="decimal">.</button>
-            <button class="botao enter" id="igual">=</button>
-        </div>
-        <footer>
-            <a href="https://github.com/profhdeivisson" target="_blank">ProfHDeivisson &#169 <span
-                    id="anoAtual"></span></a>
-        </footer>
+    <h1 class="titulo">CALCULADORA VERSÃO 2.0</h1>
+    <div id="calculadora">
+        <div id="visor"></div>
+        <br />
+        <button class="botao ac" id="limparVisor">C</button>
+        <button class="botao operacao" id="backspace">←</button>
+        <button class="botao operacao" id="raiz">√</button>
+        <button class="botao operacao" id="operadorDividir">/</button>
+        <br />
+        <button class="botao" id="tecla7">7</button>
+        <button class="botao" id="tecla8">8</button>
+        <button class="botao" id="tecla9">9</button>
+        <button class="botao operacao" id="operadorMultiplicar">*</button>
+        <br />
+        <button class="botao" id="tecla4">4</button>
+        <button class="botao" id="tecla5">5</button>
+        <button class="botao" id="tecla6">6</button>
+        <button class="botao operacao" id="operadorSubtrair">-</button>
+        <br />
+        <button class="botao" id="tecla1">1</button>
+        <button class="botao" id="tecla2">2</button>
+        <button class="botao" id="tecla3">3</button>
+        <button class="botao operacao" id="operadorSomar">+</button>
+        <br />
+        <button class="botao zero" id="tecla0">0</button>
+        <button class="botao" id="decimal">.</button>
+        <button class="botao enter" id="igual">=</button>
     </div>
+    <footer>
+        <a href="https://github.com/profhdeivisson" target="_blank">ProfHDeivisson &#169 <span
+                id="anoAtual"></span></a>
+    </footer>
+        
     <script src="./script.js"></script>
 </body>
 
