--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png" />
+  <link rel="shortcut icon" href="./assets/img/favicon.jpg" />
 
-  <title>ProfHDeivisson</title>
+  <title>Dev Deivisson Henrique</title>
 
   <!-- Bootstrap core CSS -->
   <link href="assets/css/bootstrap.css" rel="stylesheet" />
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>-->
-        <a class="navbar-brand" href="index.html">PROFHDEIVISSON</a>
+        <a class="navbar-brand" href="index.html">Dev Deivisson Henrique</a>
       </div>
       <!--<div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -57,16 +57,16 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 centered">
           <img src="assets/img/me.jpg" class="me img-thumbnail" alt="ProfHDeivisson" />
-          <h1>Hello world, eu sou Deivisson Henrique!</h1>
+          <h1>Olá mundo, eu sou Deivisson Henrique!</h1>
           <p>
-            Sou Professor de Tecnologia, CEO da TudoInfoRJ e um grande amante
-            de Tecnologia, Programação, Livros e Séries ⚡
+            Sou Profissional de Tecnologia, CEO da <a href="https://tudoinforj.com.br" target="_blank">TudoInfoRJ</a> e um grande amante
+            de Tecnologia 💻, Programação 👨🏾‍💻, Música 🎶, Filmes 🎬 e Séries ⚡
           </p>
           <p>
             Pai de 3 filhos lindos, Casado e sempre em busca de novas
-            experiências e novos conhecimentos. Aqui, você verá um pouco sobre
+            experiências e novos conhecimentos. Graduando em <b>Análise e Desenvolvimento de Sistemas</b>. Atualmente trabalho em uma ONG como Coordenador de Inovações Tecnológicas; atuo lecionando tecnologia, programação e robótica para diversas idades e sou responsável por dar manutenção em um projeto Java que funciona em dispositivos Android e Pc (windows). Além disso, trabalho como <b>desenvolvedor web</b> (WordPress) como freelancer (Mei). Possuo conhecimentos em <b>HTML 5, CSS 3, JavaScript, ReactJS (básico) e PHP (básico)</b>. Aqui, você verá um pouco sobre
             mim, minhas skills e alguns projetos pessoais feitos em
-            Javascript. Fique a vontade!
+            Javascript. Fique a vontade! 😉
           </p>
         </div>
         <!-- /col-lg-8 -->
@@ -89,17 +89,17 @@
       <div class="col-lg-4">
         <a class="zoom blue" href="./climaTempoJS/" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/climatempoJS.jpg" alt="" /></a>
-        <p>ClimaTempoJS</p>
+        <p>Clima Tempo - (JavaScript)</p>
       </div>
       <div class="col-lg-4">
         <a class="zoom blue" href="./cronometroJS/" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/cronometroJS.jpg" alt="" /></a>
-        <p>CronômetroJS</p>
+        <p>Cronômetro - (JavaScript)</p>
       </div>
       <div class="col-lg-4">
         <a class="zoom blue" href="./cepJS/" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/cepJS.png" alt="" /></a>
-        <p>CepJS</p>
+        <p>Buscador via CEP - (JavaScript)</p>
       </div>
     </div>
     <!-- /row -->
@@ -107,17 +107,17 @@
       <div class="col-lg-4">
         <a class="zoom blue" href="./pianoJS/" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/pianoJS.jpg" alt="" /></a>
-        <p>PianoJS</p>
+        <p>Piano - (JavaScript)</p>
       </div>
       <div class="col-lg-4">
         <a class="zoom blue" href="./imcJS/" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/imcJS.jpg" alt="" /></a>
-        <p>imcJS</p>
+        <p>Calculadora IMC - (JavaScript)</p>
       </div>
       <div class="col-lg-4">
         <a class="zoom blue" href="./pongJS/" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/pongJS.jpg" alt="" /></a>
-        <p>PongJS</p>
+        <p>PingPong - (JavaScript)</p>
       </div>
     </div>
     <!-- /row -->
@@ -125,27 +125,27 @@
       <div class="col-lg-4">
         <a class="zoom blue" href="./ToDoListJS/" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/ToDoListJS.jpeg" alt="" /></a>
-        <p>ToDoList</p>
+        <p>ToDoList - (JavaScript)</p>
       </div>
       <div class="col-lg-4">
         <a class="zoom blue" href="./SuperHeroes/" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/SuperHeroes.jpg" alt="" /></a>
-        <p>Super Heroes</p>
+        <p>Super Heroes - (JavaScript)</p>
       </div>
       <div class="col-lg-4">
         <a class="zoom blue" href="./GeradorDeSenhaJS/" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/senha.jpg" alt="" /></a>
-        <p>Gerador de Senha</p>
+        <p>Gerador de Senha - (JavaScript)</p>
       </div>
       <div class="col-lg-4">
         <a class="zoom blue" href="./JoKenPo JS/" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/jokenpo.jpg" alt="" /></a>
-        <p>JoKenPo2.0</p>
+        <p>JoKenPo 2.0 - (JavaScript)</p>
       </div>
       <div class="col-lg-4">
         <a class="zoom blue" href="./calculadora-JS-v2/" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/calculadora.jpg" alt="" /></a>
-        <p>Calculadora2.0</p>
+        <p>Calculadora 2.0 - (JavaScript)</p>
       </div>
     </div>
     <!-- /row -->
@@ -168,8 +168,9 @@
         <div class="col-lg-4">
           <h4>Minhas Redes</h4>
           <p>
-            <a href="https://www.behance.net/profhdeivisson" target="_blank">Behance</a><br />
+            <!-- <a href="https://www.behance.net/profhdeivisson" target="_blank">Behance</a><br /> -->
             <a href="https://github.com/profhdeivisson" target="_blank">Github</a><br />
+            <a href="https://www.linkedin.com/in/profhdeivisson/" target="_blank">Linkedin</a><br />
             <a href="https://instagram.com/profhdeivisson/" target="_blank">Instagram</a><br />
             <a href="https://tudoinforj.com.br" target="_blank">TudoInfoRJ</a>
           </p>
