Adição dos projetos TudoInfoRJ

--- a/index.html
+++ b/index.html
@@ -149,6 +149,68 @@
       </div>
     </div>
     <!-- /row -->
+
+    <h2 class="container centered mb">Projetos TudoInfoRJ - Wordpress</h2>
+    <p class="container centered mb">
+      Veja a seguir alguns sites desenvolvidos como freelancer pela minha empresa TudoInfoRJ. Espero
+      que gostem!
+    </p>
+
+    <div class="row mt centered">
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://tudoinforj.com.br" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/tudoinforj.jpg" alt="" /></a>
+        <p>Meu site - TudoInfoRJ</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://mtafibras.com.br" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/mtafibras.jpg" alt="" /></a>
+        <p>MTA Fibras</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://cddacontece.com.br" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/cddacontece.jpg" alt="" /></a>
+        <p>CDD Acontece</p>
+      </div>
+    </div>
+    <!-- /row -->
+    <div class="row mt centered">
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://inpar.org.br/inpar/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/inpar.jpg" alt="" /></a>
+        <p>INPAR - Inst. Presb. Álvaro Reis</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://redejpcomunicacao.org" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/redejpcomunicação.jpg" alt="" /></a>
+        <p>Rede JP Comunicação</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://www.okmodacarioca.com.br" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/okmodacarioca.jpg" alt="" /></a>
+        <p>Loja Virtual - OK Moda Carioca</p>
+      </div>
+    </div>
+    <!-- /row -->
+    <div class="row mt centered">
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://economistaspelademocracia.org.br" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/abed.jpg" alt="" /></a>
+        <p>ABED - Associação Brasileira de Economistas pela Democracia</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://cecfacdd.org" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/cecfa.jpg" alt="" /></a>
+        <p>CECFA - Centro Educacional Criança Futuro e Adolescência</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://exposindcon.com.br" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/exposindcon.jpg" alt="" /></a>
+        <p>#SINDICOBRASIL - (Exposindcon)</p>
+      </div>
+    </div>
+    <!-- /row -->
+
   </div>
   <!-- /container -->
 
