--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </p>
           <p>
             Pai de 3 filhos lindos, Casado e sempre em busca de novas
-            experiências e novos conhecimentos. Graduando em <b>Análise e Desenvolvimento de Sistemas</b>. Atualmente trabalho em uma ONG como Coordenador de Inovações Tecnológicas; atuo lecionando tecnologia, programação e robótica para diversas idades e sou responsável por dar manutenção em um projeto Java que funciona em dispositivos Android e Pc (windows). Além disso, trabalho como <b>desenvolvedor web</b> (WordPress) como freelancer (Mei). Possuo conhecimentos em <b>HTML 5, CSS 3, JavaScript, ReactJS (básico) e PHP (básico)</b>. Aqui, você verá um pouco sobre
+            experiências e novos conhecimentos. Graduando em <b>Análise e Desenvolvimento de Sistemas</b>. Atualmente trabalho em uma ONG como Coordenador de Inovações Tecnológicas; atuo lecionando tecnologia, programação e robótica para diversas idades e sou responsável por dar manutenção em um projeto Java que funciona em dispositivos Android e Pc (windows). Além disso, trabalho como <b>desenvolvedor web</b> (WordPress) como freelancer (Mei). Possuo conhecimentos em <b>HTML 5, CSS 3, JavaScript, ReactJS e PHP</b>. Aqui, você verá um pouco sobre
             mim, minhas skills e alguns projetos pessoais feitos em
             Javascript. Fique a vontade! 😉
           </p>
