Adição do projeto POKEDEX

--- a/index.html
+++ b/index.html
@@ -144,8 +144,13 @@
       </div>
       <div class="col-lg-4">
         <a class="zoom blue" href="./calculadora-JS-v2/" target="_blank"><img class="img-responsive"
-            src="assets/img/portfolio/calculadora.jpg" alt="" /></a>
-        <p>Calculadora 2.0 - (JavaScript)</p>
+          src="assets/img/portfolio/calculadora.jpg" alt="" /></a>
+          <p>Calculadora 2.0 - (JavaScript)</p>
+        </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="./pokedex-simples/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/pokedex.jpg" alt="" /></a>
+        <p>Pokedex 1.0 - (JavaScript)</p>
       </div>
     </div>
     <!-- /row -->
