Adição dos projetos Pokedex React e Vieira Eletrica - TudoInfoRJ

--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
             src="assets/img/portfolio/pokedex.jpg" alt="" /></a>
         <p>Pokedex 1.0 - (JavaScript)</p>
       </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://pokedex-react-profhdeivisson.vercel.app/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/pokedex 2.jpg" alt="" /></a>
+        <p>Pokedex 2.0 - (ReactJS)</p>
+      </div>
     </div>
     <!-- /row -->
 
@@ -212,6 +217,14 @@
         <a class="zoom blue" href="https://exposindcon.com.br" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/tudoinforj/exposindcon.jpg" alt="" /></a>
         <p>#SINDICOBRASIL - (Exposindcon)</p>
+      </div>
+    </div>
+    <!-- /row -->
+    <div class="row mt centered">
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://vieiraeletricaautomotiva.com.br" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/vieiraeletricaautomotiva.jpg" alt="" /></a>
+        <p>Vieira Elétrica Automotiva</p>
       </div>
     </div>
     <!-- /row -->
