Adição do projeto de citação aleatória

--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
             src="assets/img/portfolio/pokedex 2.jpg" alt="" /></a>
         <p>Pokedex 2.0 - (ReactJS)</p>
       </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://profhdeivisson.github.io/app-citacao-aleatoria/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/app-citacao-aleatoria.jpg" alt="" /></a>
+        <p>App de Citação Aleatória</p>
+      </div>
     </div>
     <!-- /row -->
 
