Adição do projeto JEJUM INTERMITENTE e mudança no link da HASHTAG SINDICO

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <p>CECFA - Centro Educacional Criança Futuro e Adolescência</p>
       </div>
       <div class="col-lg-4">
-        <a class="zoom blue" href="https://exposindcon.com.br" target="_blank"><img class="img-responsive"
+        <a class="zoom blue" href="https://hashtagsindico.com.br" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/tudoinforj/exposindcon.jpg" alt="" /></a>
         <p>#SINDICOBRASIL - (Exposindcon)</p>
       </div>
@@ -230,6 +230,11 @@
         <a class="zoom blue" href="https://vieiraeletricaautomotiva.com.br" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/tudoinforj/vieiraeletricaautomotiva.jpg" alt="" /></a>
         <p>Vieira Elétrica Automotiva</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://jejumintermitentesemmitos.com.br/desafio-estrategias-jejum-intermitente/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/jejumintermitente.jpg" alt="" /></a>
+        <p>Jejum Intermitente</p>
       </div>
     </div>
     <!-- /row -->
