Adição dos projetos Vitamina Homem, Estética Saúde Íntima e TermoMak

--- a/index.html
+++ b/index.html
@@ -236,6 +236,23 @@
             src="assets/img/portfolio/tudoinforj/jejumintermitente.jpg" alt="" /></a>
         <p>Jejum Intermitente</p>
       </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://vitaminahomem.dermocalvi.com.br" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/vitaminahomem.jpg" alt="" /></a>
+        <p>Vitamina Homem</p>
+      </div>
+    </div>
+    <div class="row mt centered">
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://esteticasaudeintima.com.br" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/esteticasaudeintima.jpg" alt="" /></a>
+        <p>Estética Saúde Íntima</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://termomak.com.br" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/termomak.jpg" alt="" /></a>
+        <p>TermoMak/p>
+      </div>
     </div>
     <!-- /row -->
 
