Adição do projeto Jejum Intermitente - Protocolo Detox

--- a/index.html
+++ b/index.html
@@ -251,7 +251,12 @@
       <div class="col-lg-4">
         <a class="zoom blue" href="https://termomak.com.br" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/tudoinforj/termomak.jpg" alt="" /></a>
-        <p>TermoMak/p>
+        <p>TermoMak</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://jejumintermitentesemmitos.com.br/protocolo-detox-3-dias/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/jejumintermitente-protocolo.jpg" alt="" /></a>
+        <p>Jejum Intermitente - Protocolo Detox</p>
       </div>
     </div>
     <!-- /row -->
