Adição do projeto Desafio OMAD

--- a/index.html
+++ b/index.html
@@ -259,6 +259,13 @@
         <p>Jejum Intermitente - Protocolo Detox</p>
       </div>
     </div>
+    <div class="row mt centered">
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://jejumintermitentesemmitos.com.br/desafio-omad" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/jejumintermitente-desafio-omad.png" alt="" /></a>
+        <p>Jejum Intermitente - Desafio OMAD</p>
+      </div>
+    </div>
     <!-- /row -->
 
   </div>
