--- a/index.html
+++ b/index.html
@@ -261,6 +261,16 @@
     </div>
     <div class="row mt centered">
       <div class="col-lg-4">
+        <a class="zoom blue" href="https://lojacaixinhadesurpresas.com.br" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/lojacaixinhadesurpresas.jpg" alt="" /></a>
+        <p>Loja Caixinha de Surpresas</p>
+      </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://advogadajullytrevisol.com.br" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/advogadajully.jpg" alt="" /></a>
+        <p>Advogada Jully Trevisol</p>
+      </div>
+      <div class="col-lg-4">
         <a class="zoom blue" href="https://jejumintermitentesemmitos.com.br/desafio-omad" target="_blank"><img class="img-responsive"
             src="assets/img/portfolio/tudoinforj/jejumintermitente-desafio-omad.png" alt="" /></a>
         <p>Jejum Intermitente - Desafio OMAD</p>
