Adição do projeto sognare

--- a/index.html
+++ b/index.html
@@ -276,6 +276,13 @@
         <p>Jejum Intermitente - Desafio OMAD</p>
       </div>
     </div>
+    <div class="row mt centered">
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://sognaremarcas.com" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/sognare.jpg" alt="" /></a>
+        <p>Sognare Marcas</p>
+      </div>
+    </div>
     <!-- /row -->
 
   </div>
