Adição do projeto Jejum Intermitente - Desafio Pense Magro

--- a/index.html
+++ b/index.html
@@ -282,6 +282,11 @@
             src="assets/img/portfolio/tudoinforj/sognare.jpg" alt="" /></a>
         <p>Sognare Marcas</p>
       </div>
+      <div class="col-lg-4">
+        <a class="zoom blue" href="https://jejumintermitentesemmitos.com.br/desafio-pense-magro-2/" target="_blank"><img class="img-responsive"
+            src="assets/img/portfolio/tudoinforj/jejumintermitente-desafio-pense-magro.png" alt="" /></a>
+        <p>Jejum Intermitente - Desafio Pense Magro</p>
+      </div>
     </div>
     <!-- /row -->
 
